--- a/shared/main.css
+++ b/shared/main.css
@@ -3805,7 +3805,7 @@
 
 		#main > .main {
 			  /* padding: 5em 5em 3em 5em ; */
-  			padding: 2em 2em 1em 2em ; */
+  			padding: 2em 2em 1em 2em ; 
 
 			border-top: solid 1px #dddddd;
 		}
